--- a/app/assets/stylesheets/jobList.scss
+++ b/app/assets/stylesheets/jobList.scss
@@ -2,6 +2,10 @@
   border-radius: 20px ;
   border: green solid 4px;
 }
+.cols-border-s{
+  border-radius: 12px ;
+  border: gray solid 2px;
+}
 .icon-20{
   font-size: 40px;
 }
