--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,8 +25,9 @@
           <div class="col-3 p-0">
             <%= link_to image_tag('/images/cover-fb-1m-1.webp', class: 'img img-fluid logo'), jobs_path %>
           </div>
-
-          <div class="col-4 "></div>
+          <div class="col-4 ">
+            <%= link_to 'Các job đã apply', applied_jobs_path %>
+          </div>
           <div class="col-5 d-flex flex-column justify-content-center">
             <% if user_signed_in? %>
               <div class="row flex-nowrap">
@@ -65,13 +66,6 @@
           </div>
       </div>
       <%= yield %>
-    </div>
-    <div class="pt-5">
-      <section id="copy-right">
-        <div class="copy-right-sec"><i class="fa-solid fa-copyright"></i>  
-          Degign by hoangnh <%= link_to '|     ZIGExN VeNtura		2023', jobs_path %>
-        </div>
-      </section>
     </div>
   </body>
 </html>
